Fix bug #52290 (setDate, setISODate, setTime works wrong when DateTime created from timestamp)